Detail upgrade + doc class

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,36 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       lang="fr">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" th:href="@{/css/main.css}"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <meta charset="UTF-8">
-    <title>Title</title>
+<head th:replace="fragments/nav :: head">
 </head>
+
 <body>
-<nav class="navbar navbar-dark navbar-expand-lg bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Species CRUD</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link " href="#" onclick="window.location='species'">Especes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#" onclick="window.location='animal'">Animaux</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#" onclick="window.location='person'">Personne</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<h1>Erreur !!!</h1>
-<h2> Ce n'est pas cette vue que vous cherchez ...</h2>
+    <div th:replace="fragments/nav :: nav"></div>
+    <h1>Erreur !!!</h1>
+    <hr class="my-4">
+    <h2> Ce n'est pas cette vue que vous cherchez ...</h2>
 </body>
 </html>
