--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -19,7 +19,7 @@
           <a class="nav-link" href="#" onclick="window.location='/animal'">Animaux</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" onclick="window.location='/person'">Personne</a>
+          <a class="nav-link" href="#" onclick="window.location='/person'">Personnes</a>
         </li>
       </ul>
     </div>
