--- a/src/main/resources/templates/person/detail_person.html
+++ b/src/main/resources/templates/person/detail_person.html
@@ -1,76 +1,56 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       lang="fr">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" th:href="@{/css/main.css}"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <meta charset="UTF-8">
-    <title>Personne</title>
+<head  th:replace="fragments/nav :: head">
 </head>
-<body>
-    <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Species CRUD</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link " href="#" onclick="window.location='/species'">Especes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#" onclick="window.location='/animal'">Animaux</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#" onclick="window.location='/person'">Personne</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-    <h1>Detail d'une Personne</h1>
 
-    <div>
-        <form th:object="${person}" th:action="@{/person}" method="post">
+<body>
+    <div th:replace="fragments/nav :: nav"></div>
+    <h1>Detail d'une Personne</h1>
+    <hr class="my-4">
+
+
+        <form id="form-create" th:object="${person}" th:action="@{/person}" method="post">
             <input type="hidden" th:field="*{id}"/>
 
-            <div>
-                <label class="form-label"  for="age">Age</label>
+            <div class="col-md-4">
+                <label class="form-label" for="age">Age</label>
                 <input class="form-control" type="number" th:field="*{age}" id="age"/>
-                <span th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Error</span>
+                <span class="errors" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Error</span>
             </div>
 
-            <div>
+            <div class="col-md-4">
                 <label class="form-label" for="firstname">Prenom</label>
                 <input class="form-control"type="text" th:field="*{firstname}" id="firstname"/>
-                <span th:if="${#fields.hasErrors('firstname')}" th:errors="*{firstname}">Error</span>
+                <span  class="errors" th:if="${#fields.hasErrors('firstname')}" th:errors="*{firstname}">Error</span>
             </div>
 
-            <div>
+            <div class="col-md-4">
                 <label class="form-label"  for="lastname">Nom</label>
                 <input class="form-control" type="text" th:field="*{lastname}" id="lastname"/>
-                <span th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}">Error</span>
+                <span class="errors" th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}">Error</span>
             </div>
 
-            <div>
-                <label class="form-label">Animaux</label>
-                <ul th:each="animalItem : ${animalList}">
-                    <il>
-                        <a class="btn" th:href="@{'/animal/' + ${animalItem.id}}" th:text="${animalItem.name}"></a>
-                    </il>
-                </ul>
+
+
+            <div class="col-md-4">
+                <label class="form-label" for="lstAnimals">Animaux Associés</label>
+                <select class="form-select" multiple th:field="*{lstAnimals}" id="lstAnimals">
+                    <option
+                            th:each="animal : ${animalListAll}"
+                            th:value="${animal.id}" th:text="${animal.name}"
+                            th:selected="${person.lstAnimals.contains(animal)}">
+                    </option>
+                </select>
             </div>
 
-            <div>
+
+
+            <div class="col-md-4">
                 <input type="submit" class="btn btn-success" value="Sauver"/>
                 <input type="button" class="btn btn-primary" value="Retour"
                        onclick="window.location='/person'"/>
             </div>
         </form>
-
-
-    </div>
 </body>
 </html>
